--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^1.5.0",
     "canvas-toBlob": "^1.0.0",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-qr-code": "^2.0.12",
