--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^3.0.1",
     "qr-with-logo": "^1.0.5",
     "qrcode": "^1.5.3",
-    "qrcode-with-logos": "^1.0.3"
+    "qrcode-with-logos": "^1.0.3",
+    "sharp": "^0.32.6"
   }
 }
